--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-     <title>Get Ready - Coming Soon Template</title>
+     <title>വിളവ് മാസിക</title>
 <!-- 
 
 Get Ready Template
@@ -92,9 +92,8 @@ West Desom,
 
                     <div class="col-md-12 col-sm-12">
                          <div class="home-info">
-                              <h1>വിളവ് <br>മാസിക </h1>
-                          
-                              <ul class="countdown">
+                           <h1><strong><a href="index.html">വിളവ് മാസിക </a></strong></h1>
+                           <ul class="countdown">
                                    <li>
                                         <span class="days"> </span>
                                         
