--- a/index.html
+++ b/index.html
@@ -3,13 +3,7 @@
 <head>
 
      <title>വിളവ് മാസിക</title>
-<!-- 
 
-Get Ready Template
-
-https://templatemo.com/tm-521-get-ready
-
--->
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
      <meta name="description" content="">
@@ -42,7 +36,7 @@ https://templatemo.com/tm-521-get-ready
 
 
     <div class="menu-bg"></div>
-    <div class="menu-burger">☰</div>
+    <div class="menu-burger">⮛</div>
 
     <div class="menu-items">
        <div class="container">
