--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+<link rel="shortcut icon" type="image/png" href="favicon.png"/>
      <title>വിളവ് മാസിക</title>
 
      <meta charset="UTF-8">
