--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
          <div class="row">
            <div class="col-md-offset-2 col-md-4 col-sm-6">
 			   <ul class="menu">
-	<li></li><a href="https://drive.google.com/embeddedfolderview?id=1pTB0Sy7OSuYcmMpP4d_r6v19VpKtC2tc#grid"><img src="images/archive.png"align="center"><br> Archives</br> </a></li></ul>
+	<li></li><a href="https://drive.google.com/embeddedfolderview?id=1pTB0Sy7OSuYcmMpP4d_r6v19VpKtC2tc#grid"><img src="images/archive.png"align="center"></a></li></ul>
             <h1>Contact us</h1>
              <ul class="menu">
 				 
