--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                   
 		<!--			<li class="dropdown"><a href="#"><span>2021</span> <i class="bi bi-chevron-right"></i></a>
                     <ul>  -->
-                      <li><a href="https://drive.google.com/file/d/1LABFhDCIqOn9vNwILQK8H4CMCS2OzwKe/preview">January-April 2013 </a></li>
-                      <li><a href="https://drive.google.com/file/d/1L5FV3kPcZRbjDgvXGcMcFkQ1IlNWt4Yh/preview">August- September 2020</a></li>
-                      <li><a href="https://drive.google.com/file/d/1jiXyrrOtMXaoiy8CozmrNZ4wF2nRCkY0/preview">January 2021</a></li>
-                      <li><a href="https://drive.google.com/file/d/1n6rbjDjiM3G1-mYLFiuYLJE3Dy20eSUg/preview">February March 2021</a></li>
+                      <li><a href="https://drive.google.com/uc?export=preview&id=1LABFhDCIqOn9vNwILQK8H4CMCS2OzwKe">January-April 2013 </a></li>
+                      <li><a href="https://drive.google.com/uc?export=preview&id=1L5FV3kPcZRbjDgvXGcMcFkQ1IlNWt4Yh">August- September 2020</a></li>
+                      <li><a href="https://drive.google.com/uc?export=preview&id=1jiXyrrOtMXaoiy8CozmrNZ4wF2nRCkY0">January 2021</a></li>
+                      <li><a href="https://drive.google.com/uc?export=preview&id=1n6rbjDjiM3G1-mYLFiuYLJE3Dy20eSUg">February March 2021</a></li>
            <!--          <li><a href="https://drive.google.com/file/d/1npUew7LmEHL80s0rDh6xFrQ5_9Gtmyaq/preview">മേയ്</a></li>
 					  <li><a href="https://drive.google.com/file/d/187el6HfEpWwsP84fJO-3iLha8uEKEuE3/preview">ജൂണ്‍</a></li>
 						<li><a href="https://drive.google.com/file/d/14ts-lSrrqZh2hGATZuKcjkcjaGT2RUBs/preview">ജൂലൈ</a></li>
@@ -206,13 +206,13 @@ West Desom,Aluva - 2</p>
     <div class="container">
       <h3>വിളവ് മാസിക</h3>
       <p>കര്‍ത്താവേ അങ്ങയുടെ സഭയിലേക്ക് വിശുദ്ധരായ വേലക്കാരെ അയക്കണമേ</p>
-      <div class="social-links">
+     <!-- <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      </div>
+      </div> -->
       <div class="copyright">
         &copy; Copyright <strong><span>Rogationist Fathers</span></strong>. All Rights Reserved
       </div>
