--- a/index.html
+++ b/index.html
@@ -61,31 +61,31 @@
                       <li><a href="https://drive.google.com/uc?export=preview&id=1L5FV3kPcZRbjDgvXGcMcFkQ1IlNWt4Yh">August- September 2020</a></li>
                       <li><a href="https://drive.google.com/uc?export=preview&id=1jiXyrrOtMXaoiy8CozmrNZ4wF2nRCkY0">January 2021</a></li>
                       <li><a href="https://drive.google.com/uc?export=preview&id=1n6rbjDjiM3G1-mYLFiuYLJE3Dy20eSUg">February March 2021</a></li>
-           <!--          <li><a href="https://drive.google.com/file/d/1npUew7LmEHL80s0rDh6xFrQ5_9Gtmyaq/preview">മേയ്</a></li>
-					  <li><a href="https://drive.google.com/file/d/187el6HfEpWwsP84fJO-3iLha8uEKEuE3/preview">ജൂണ്‍</a></li>
-						<li><a href="https://drive.google.com/file/d/14ts-lSrrqZh2hGATZuKcjkcjaGT2RUBs/preview">ജൂലൈ</a></li>
-						<li><a href="https://drive.google.com/file/d/1M2jpJXSWgwvjSI5lT730WHilpvjr5op2/preview">ഓഗസ്റ്റ്</a></li>
-						<li><a href="https://drive.google.com/file/d/1qlRJyPMMawF84zJd2dvzr6ums3vu08Us/preview">സെപ്റ്റംബര്‍</a></li>
-						<li><a href="https://drive.google.com/file/d/1qbW1qry7qDvoNZGnJnDi_2By7-Pc8yaw/preview">ഒക്ടോബര്‍</a></li>
-						<li><a href="https://drive.google.com/file/d/1jGTpBzr2uZwbTKqQoWRJp8tzYJDgW1_d/preview">നവംബര്‍</a></li>
-						<li><a href="https://drive.google.com/file/d/1QMdIkYhIbD-EoTSXdiBBrt2v18qARR9W/preview">ഡിസംബര്‍</a></li>
+           <!--          <li><a href="https://drive.google.com/uc?export=preview&id=1npUew7LmEHL80s0rDh6xFrQ5_9Gtmyaq">മേയ്</a></li>
+					  <li><a href="https://drive.google.com/uc?export=preview&id=187el6HfEpWwsP84fJO-3iLha8uEKEuE3">ജൂണ്‍</a></li>
+						<li><a href="https://drive.google.com/uc?export=preview&id=14ts-lSrrqZh2hGATZuKcjkcjaGT2RUBs">ജൂലൈ</a></li>
+						<li><a href="https://drive.google.com/uc?export=preview&id=1M2jpJXSWgwvjSI5lT730WHilpvjr5op2">ഓഗസ്റ്റ്</a></li>
+						<li><a href="https://drive.google.com/uc?export=preview&id=1qlRJyPMMawF84zJd2dvzr6ums3vu08Us">സെപ്റ്റംബര്‍</a></li>
+						<li><a href="https://drive.google.com/uc?export=preview&id=1qbW1qry7qDvoNZGnJnDi_2By7-Pc8yaw">ഒക്ടോബര്‍</a></li>
+						<li><a href="https://drive.google.com/uc?export=preview&id=1jGTpBzr2uZwbTKqQoWRJp8tzYJDgW1_d">നവംബര്‍</a></li>
+						<li><a href="https://drive.google.com/uc?export=preview&id=1QMdIkYhIbD-EoTSXdiBBrt2v18qARR9W">ഡിസംബര്‍</a></li>
                     </ul>
                   </li>
 					
                   <li class="dropdown"><a href="#"><span>2020</span> <i class="bi bi-chevron-right"></i></a>
                     <ul>
-                      <li><a href="https://drive.google.com/file/d/1L5FV3kPcZRbjDgvXGcMcFkQ1IlNWt4Yh/preview">ജനുവരി</a></li>
-                      <li><a href="https://drive.google.com/file/d/K-h7pGpiCcaCk5W9ZU8BiU0D2CToddVZ/preview">ഫെബ്രുവരി</a></li>
-                      <li><a href="https://drive.google.com/file/d/1o3vXMKyJtB1yAQM0ZVel-S9XtAhL_zYc/preview">മാര്‍ച്ച്</a></li>
-                      <li><a href="https://drive.google.com/file/d/1jiXyrrOtMXaoiy8CozmrNZ4wF2nRCkY0/preview">ഏപ്രില്‍</a></li>
-                      <li><a href="https://drive.google.com/file/d/130oMh2ed07k3QAL-Bar0GqITPlYsDxIr/preview">മേയ്</a></li>
-					  <li><a href="https://drive.google.com/file/d/1crLA7nk4s0fc5cVrNBLTYQ34mNdvR5Qn/preview">ജൂണ്‍</a></li>
-						<li><a href="https://drive.google.com/file/d/1DI5c7g3qkGUHMkDrC7RdKgvR4V7hHL59/preview">ജൂലൈ</a></li>
-						<li><a href="https://drive.google.com/file/d/1LABFhDCIqOn9vNwILQK8H4CMCS2OzwKe/preview">ഓഗസ്റ്റ്</a></li>
-						<li><a href="https://drive.google.com/file/d/1qmCtPUBYNdOboJBcLnFI9RMm7tHZoS8h/preview">സെപ്റ്റംബര്‍</a></li>
-						<li><a href="https://drive.google.com/file/d/1LAHJms4K80pjCPSmxBezVXws2FW4VhBT/preview">ഒക്ടോബര്‍</a></li>
-						<li><a href="https://drive.google.com/file/d/1yAvWT5V5tTNPhYFUODqAajCxz4amopQT/preview">നവംബര്‍</a></li>
-						<li><a href="https://drive.google.com/file/d/1n6rbjDjiM3G1-mYLFiuYLJE3Dy20eSUg/preview">ഡിസംബര്‍</a></li>
+                      <li><a href="https://drive.google.com/uc?export=preview&id=1L5FV3kPcZRbjDgvXGcMcFkQ1IlNWt4Yh">ജനുവരി</a></li>
+                      <li><a href="https://drive.google.com/uc?export=preview&id=K-h7pGpiCcaCk5W9ZU8BiU0D2CToddVZ">ഫെബ്രുവരി</a></li>
+                      <li><a href="https://drive.google.com/uc?export=preview&id=1o3vXMKyJtB1yAQM0ZVel-S9XtAhL_zYc">മാര്‍ച്ച്</a></li>
+                      <li><a href="https://drive.google.com/uc?export=preview&id=1jiXyrrOtMXaoiy8CozmrNZ4wF2nRCkY0">ഏപ്രില്‍</a></li>
+                      <li><a href="https://drive.google.com/uc?export=preview&id=130oMh2ed07k3QAL-Bar0GqITPlYsDxIr">മേയ്</a></li>
+					  <li><a href="https://drive.google.com/uc?export=preview&id=1crLA7nk4s0fc5cVrNBLTYQ34mNdvR5Qn">ജൂണ്‍</a></li>
+						<li><a href="https://drive.google.com/uc?export=preview&id=1DI5c7g3qkGUHMkDrC7RdKgvR4V7hHL59">ജൂലൈ</a></li>
+						<li><a href="https://drive.google.com/uc?export=preview&id=1LABFhDCIqOn9vNwILQK8H4CMCS2OzwKe">ഓഗസ്റ്റ്</a></li>
+						<li><a href="https://drive.google.com/uc?export=preview&id=1qmCtPUBYNdOboJBcLnFI9RMm7tHZoS8h">സെപ്റ്റംബര്‍</a></li>
+						<li><a href="https://drive.google.com/uc?export=preview&id=1LAHJms4K80pjCPSmxBezVXws2FW4VhBT">ഒക്ടോബര്‍</a></li>
+						<li><a href="https://drive.google.com/uc?export=preview&id=1yAvWT5V5tTNPhYFUODqAajCxz4amopQT">നവംബര്‍</a></li>
+						<li><a href="https://drive.google.com/uc?export=preview&id=1n6rbjDjiM3G1-mYLFiuYLJE3Dy20eSUg">ഡിസംബര്‍</a></li>
                     </ul>
                   </li> -->
                   
